--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+/RailRiderUnity/[Ll]ibrary/
+/RailRiderUnity/[Tt]emp/
+/RailRiderUnity/[Oo]bj/
+/RailRiderUnity/[Bb]uild/
+/RailRiderUnity/[Bb]uilds/
+/RailRiderUnity/[Ll]ogs/
+/RailRiderUnity/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-!/[Aa]ssets/**/*.meta
+!/RailRiderUnity/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/buildPath
