Switched bezier library. Made the AddCurve function bidirectional and build off existing tangent

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /RailRiderUnity/[Bb]uilds/
 /RailRiderUnity/[Ll]ogs/
 /RailRiderUnity/[Mm]emoryCaptures/
+/RailRiderX/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/RailRiderUnity/[Aa]ssets/**/*.meta
